Fix settings menu overflow (#144)

--- a/src/app/modules/settings/settings-dialog.css
+++ b/src/app/modules/settings/settings-dialog.css
@@ -21,6 +21,8 @@
     display: block;
     position: fixed;
     min-width: 140px;
+    overflow: auto;
+    height: 58%;
 }
 
 .left-settings-menu-button {
@@ -52,6 +54,11 @@ only screen	and (min-width : 800px) {
     .right-settings-content {
         margin-left: initial;
     }   	
+}
+@media only screen and (max-height: 500px) {
+	.left-settings-menu {
+        height: 55%;
+    }	
 }
 /*sm*/
 @media only screen and (min-width: 600px) and (max-width: 959px),
